src/tests/testfiles/variable-declarations/20.txt
testfiles/variable-declarations/20.c:2:10: error: variable 'a' undeclared
int a = a;
        ^
